<resources>
    <string name="app_name">Who wants to be a millionaire?</string>
    <string name="play">Play</string>
    <string name="credits">Credits</string>
    <string name="scores">Scores</string>
    <string name="settings">Settings</string>
    <string name="unknown">Unknown</string>
    <string name="NoConexion">There is a problem with the Server</string>
    <string name="DBProblem">There is some problem with the Database</string>
    <!-- settings -->
    <string name="name">Name:</string>
    <string name="enterYourName">Enter your Name</string>
    <string name="howManyTimes">How many times can you ask for help</string>
    <string name="addFriend">Add Friend</string>
    <string name="enterFriendName">Enter your friend\'s name</string>

    <!-- scores -->
    <string name="local" translatable="false">Local</string>
    <string name="Friends">Friends</string>

    <!-- play -->
    <string name="txtQuestion">Question: </string>
    <string name="txtPlay">Total won: </string>
    <string name="Lifelines">Lifelines: </string>
    <string name="stand">Stand</string>
    <!--endgame -->
    <string name="txtEndGame">Game Finished, your score is: </string>
    <string name="txtRightAns">Right Answers: </string>
    <string name="txtMoneyWon">Money Won: </string>

    <!--credits-->
    <string name="Copy" translatable="false">DSM 2017-2018 </string>
    <string name="Authors">Authors: </string>
    <string name="Profe" translatable="false">David de Andrés</string>
    <string name="stackoverflow" translatable="false">Stack Overflow</string>
    <string name="androidDev" translatable="false">Android Developers</string>
    <string name="Vacas" translatable="false">Sergio Vacas Bodoque</string>
    <string name="David" translatable="false">David Guillem Mateu</string>
    <string name="Agradecimientos">Special thanks:</string>
</resources>
